re PR fortran/19754 (Shape conformance not checked)

PR fortran/19754
* resolve.c (compare_shapes):  New function.
(resolve_operator): Use it.

From-SVN: r95945